# captchaai-workflow-doctor

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  mypy.ini  pyproject.toml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
INTERNAL-STRATEGY/: article-draft.md  captchaai_workflow_doctor_full_plan.md
captchaai_doctor/: __init__.py  browser.py  captchaai_client.py  classifier.py  cli.py  config.py  detector.py  fake_captchaai.py  injector.py  poller.py  redaction.py  report.py  runner.py  schemas.py  verifier.py
demos/: __init__.py
docs/: README.md  architecture.md  ci-integration.md  failure-taxonomy.md  overview.md  profile-schema.md  real-e2e-evidence.md  report-schema.md  responsible-use.md  sending-a-support-report.md  token-lifecycle.md  troubleshooting.md
profiles/: cloudflare-challenge-generic.yaml  local-demo-cloudflare-challenge.yaml  local-demo-form-recaptcha-v2.yaml  local-demo-form-recaptcha-v3.yaml  local-demo-login-recaptcha.yaml  local-demo-login-turnstile-invisible.yaml  local-demo-login-turnstile.yaml  recaptcha-v2-generic.yaml  recaptcha-v3-generic.yaml  turnstile-generic.yaml
sample-reports/: callback-not-invoked.html  callback-not-invoked.json  captchaai-balance.html  captchaai-balance.json  cloudflare-challenge-success.html  cloudflare-challenge-success.json  cloudflare-proxy-misconfigured.html  cloudflare-proxy-misconfigured.json  recaptcha-v3-action-missing.html  recaptcha-v3-action-missing.json  recaptcha-v3-success.html  recaptcha-v3-success.json  sitekey-not-found.html  sitekey-not-found.json  success.html  success.json  turnstile-invisible-success.html  turnstile-invisible-success.json  verification-failed.html  verification-failed.json
scripts/: capture-report-screenshot.py  provision-server.sh  (+2 more)
(+37 files in other folders)
