[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "captchaai-workflow-doctor"
version = "0.2.0"
description = "Diagnostic CLI for debugging CAPTCHA-solving workflows from CaptchaAI API request to browser acceptance."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "CaptchaAI" }]
keywords = ["captcha", "captchaai", "playwright", "diagnostic", "turnstile", "recaptcha"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "click>=8.1",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "playwright>=1.44",
  "jinja2>=3.1",
  "rich>=13.7",
  "cssselect>=1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-PyYAML",
  "jsonschema>=4.22",
  "flask>=3.0",
]

[project.scripts]
captchaai-doctor = "captchaai_doctor.cli:main"

[project.urls]
Homepage = "https://github.com/CaptchaAI/captchaai-workflow-doctor"
Issues = "https://github.com/CaptchaAI/captchaai-workflow-doctor/issues"

[tool.hatch.build.targets.wheel]
packages = ["captchaai_doctor"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "e2e: end-to-end tests that spin up demo apps and a browser",
  "slow: tests that take more than a few seconds",
]
